--- a/src/components/header/menu.css
+++ b/src/components/header/menu.css
@@ -47,6 +47,7 @@ header h3 {
   outline-color: var(--second-color);
   outline-style: none;
   font-family: 'Sunflower';
+  text-align: center;
   font-size: var(--large-font-size);
   color: var(--second-color);
 }
