--- a/src/components/top10/top-10-styles.css
+++ b/src/components/top10/top-10-styles.css
@@ -1,10 +1,18 @@
-ul {
+.top10 h2 {
+  /* text-align: center; */
+  margin: 15px 5px;
+  /* border: 1px solid var(--second-color); */
+  color: var(--font-color);
+
+}
+
+.top10__list {
   display: flex;
   overflow-x: auto;
   flex-shrink: 0;
 }
 
-ul li {
+.top10__list .top10__list__item {
   width: 300px;
   height: 300px;
   background-repeat: no-repeat;
@@ -13,8 +21,9 @@ ul li {
   /* border: 1px solid red; */
   position: relative;
   margin-right:10px ;
+  
 }
-li p {
+.top10__list__item p {
   /* width: 200px; */
   display: flex;
   justify-content: center;
@@ -30,10 +39,20 @@ li p {
   
   z-index: 1;
 }
-li img {
+.top10__list__item img {
   width: 200px;
   height: 300px;
   position: relative;
   object-fit: cover;
+  border-radius: 5px;
   opacity: 0.5;
+}
+
+.top10__list__item img:hover {
+  /* position: absolute; */
+  /* margin: 0 20px; */
+  transition: ease;
+  transition-duration: 0.3s;
+  transform: scale(1.08);
+  opacity: 1;
 }
