--- a/src/main-styles.css
+++ b/src/main-styles.css
@@ -2,10 +2,12 @@
 
   /*COLORS*/
   /* --background-color: #102f4b; */
-  --background-color: #0d263b;
+  /* --background-color: #0d263b; */
+  --background-color: #131313;
   /* --font-color: #e7d9ea; */
   --font-color: #f1f1f1;
-  --main-color: #11698e;
+  --main-color: #232424;
+  /* --main-color: #11698e; */
   --second-color: #16c79a;
 
   /*FONT-SIZE*/
